plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.7'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.github.kzhunmax'
version = '1.0'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

ext {
	set('testcontainers.version', "1.21.3")
}

dependencies {
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
    implementation 'software.amazon.awssdk:url-connection-client:2.35.10'
    implementation 'software.amazon.awssdk:s3:2.35.10'
	implementation 'org.springframework.kafka:spring-kafka'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'tools.jackson.datatype:jackson-datatype-jsr310:3.0.0-rc2'
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	implementation 'ch.qos.logback:logback-classic:1.5.18'
	implementation 'org.springframework.security:spring-security-crypto'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
    implementation 'org.flywaydb:flyway-core:11.15.0'
    implementation 'org.mapstruct:mapstruct:1.6.3'
	compileOnly 'org.projectlombok:lombok:1.18.38'
	runtimeOnly 'org.postgresql:postgresql:42.7.7'
    runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.15.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'
	annotationProcessor 'org.projectlombok:lombok:1.18.38'
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	testImplementation 'org.testcontainers:elasticsearch:1.21.3'
	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
	testImplementation 'com.redis:testcontainers-redis:2.2.4'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
	archiveFileName = 'app.jar'
}